# liteparse

./: .gitignore  AGENTS.md  MARKDOWN_PLAN.md  MARKDOWN_PROGRESS.md  README.md  README.zh-CN.md  full.Dockerfile
.github/workflows/: release-crates.yml  release-python.yml
bench/python/: README.md  convert-csv.py  pyproject.toml  run-bench.sh  run-prof.sh
bench/python/benchmarks/: conftest.py  test_1page.py  test_24pages.py  test_250pages.py  test_60pages.py
bench/python/profiling/: liteparse_1.py  liteparse_24.py  liteparse_250.py  liteparse_60.py  main.py  pdftotext_1.py  pdftotext_24.py  pdftotext_250.py  pdftotext_60.py  pymupdf_1.py  pymupdf_24.py  pymupdf_250.py  pymupdf_60.py
crates/liteparse/: Cargo.toml  README.md
crates/liteparse-napi/: Cargo.toml
crates/liteparse-napi/src/: lib.rs  types.rs
crates/liteparse-python/: Cargo.toml
crates/liteparse-python/src/: cli.rs  lib.rs
crates/liteparse-wasm/: Cargo.toml
crates/liteparse-wasm/src/: lib.rs
crates/liteparse/src/: acroform_repair.rs  config.rs  extract.rs  lib.rs  main.rs  ocr_merge.rs  parser.rs  projection.rs  render.rs  search.rs  types.rs
crates/liteparse/tests/: integration_test.rs
crates/pdfium/: Cargo.toml
crates/pdfium-sys/: Cargo.toml  bindings.rs  build.rs
crates/pdfium-sys/src/: dynamic.rs
crates/pdfium/src/: bitmap.rs  document.rs  font.rs  lib.rs  library.rs  page.rs  struct_tree.rs  (+1 more)
ocr/: README.md
ocr/suryaocr/: Dockerfile  README.md  server.py
pypdfTest/: README.md  compare.py  pypdf_worker.py
scripts/: create-dataset.sh
wasm-demo-site/: index.html
(+25 files in other folders)
