[project]
name = "python-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "liteparse-python",
    "pdftotext>=3.0.0",
    "pymupdf>=1.27.2.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
    "scalene>=2.3.0",
]

[tool.uv.sources]
liteparse-python = { path = "../../target/wheels/liteparse_python-2.0.0-cp313-cp313-macosx_11_0_arm64.whl" }
